[gd_scene load_steps=5 format=3 uid="uid://klq80i004brf"]

[ext_resource type="Script" path="res://assets/debug/scripts/debug_display.gd" id="1_fy0n0"]
[ext_resource type="PackedScene" uid="uid://caf3yhbncyxwf" path="res://assets/debug/scenes/debug_building.tscn" id="3_xgp8e"]
[ext_resource type="PackedScene" uid="uid://bm06gok1hhcpc" path="res://assets/debug/scenes/debug_units.tscn" id="4_spr7n"]
[ext_resource type="PackedScene" uid="uid://bon51dyvp8mot" path="res://assets/debug/scenes/debug_resources.tscn" id="5_l6a7d"]

[node name="DebugDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fy0n0")

[node name="Shade" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -33.0
offset_right = -9.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.0.0"

[node name="Panels" type="VFlowContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
alignment = 2

[node name="NextTurn" type="Button" parent="Panels"]
layout_mode = 2
text = "Next Turn"

[node name="ResetGame" type="Button" parent="Panels"]
layout_mode = 2
text = "Reset Game"

[node name="ResourceDebugPanel" parent="Panels" instance=ExtResource("5_l6a7d")]
custom_minimum_size = Vector2(300, 280)
layout_mode = 2

[node name="UnitsDebugPanel" parent="Panels" instance=ExtResource("4_spr7n")]
custom_minimum_size = Vector2(300, 260)
layout_mode = 2

[node name="BuildingDebug Panel" parent="Panels" instance=ExtResource("3_xgp8e")]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2
